nestedVirt/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_win2016nvrt_name": {
            "defaultValue": "win2016nvrt",
            "type": "String"
        },
        "networkInterfaces_nic_primary_name": {
            "defaultValue": "nic-primary",
            "type": "String"
        },
        "virtualNetworks_vnet_nestedvirt_name": {
            "defaultValue": "vnet-nestedvirt",
            "type": "String"
        },
        "networkInterfaces_win2016nvrt506_name": {
            "defaultValue": "win2016nvrt506",
            "type": "String"
        },
        "publicIPAddresses_win2016nvrt_ip_name": {
            "defaultValue": "win2016nvrt-ip",
            "type": "String"
        },
        "storageAccounts_imagestoreinsightful_name": {
            "defaultValue": "imagestoreinsightful",
            "type": "String"
        },
        "networkSecurityGroups_win2016nvrt_nsg_name": {
            "defaultValue": "win2016nvrt-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_default_allow_rdp_name": {
            "defaultValue": "default-allow-rdp",
            "type": "String"
        },
        "virtualMachines_win2016nvrt_id": {
            "defaultValue": "/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Compute/disks/win2016nvrt_OsDisk_1_128a3c51aada4a13b49d28edcea76989",
            "type": "String"
        },
        "virtualMachines_win2016nvrt_id_1": {
            "defaultValue": "/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NESTEDVIRT/providers/Microsoft.Compute/disks/VHDS",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Compute/virtualMachines/win2016nvrt'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_win2016nvrt_name')]",
            "apiVersion": "2017-03-30",
            "location": "westus",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D16s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_win2016nvrt_name'),'_OsDisk_1_128a3c51aada4a13b49d28edcea76989')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_win2016nvrt_id')]"
                        },
                        "diskSizeGB": 128
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "VHDS",
                            "createOption": "Attach",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS",
                                "id": "[parameters('virtualMachines_win2016nvrt_id_1')]"
                            },
                            "diskSizeGB": 1023
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_win2016nvrt_name')]",
                    "adminUsername": "insightful",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_win2016nvrt506_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://bdiags.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_win2016nvrt506_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/networkInterfaces/nic-primary'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_nic_primary_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9cfa42a4-d202-4353-aabf-cebd13cc30b5",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"b217fff3-0389-4fe5-9803-4061ae6894c2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.2.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_nestedvirt_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "l5aduggqpyledgegjmo4mpauaa.dx.internal.cloudapp.net"
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_nestedvirt_name'), parameters('subnets_default_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/networkInterfaces/win2016nvrt506'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_win2016nvrt506_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "a066e7bb-39c3-492e-ac2f-a7f6dcaba18f",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"a4f473ae-e221-4ec1-9347-eb3dc1c93e17\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.2.0.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_win2016nvrt_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_nestedvirt_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "l5aduggqpyledgegjmo4mpauaa.dx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-30-3B-F9",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_win2016nvrt_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_win2016nvrt_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_win2016nvrt_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_nestedvirt_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_win2016nvrt_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_win2016nvrt_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/networkSecurityGroups/win2016nvrt-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_win2016nvrt_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "bb221e38-3fd8-4a99-a283-0b8ad182c0f8",
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"f041fc81-044a-4038-b7a2-09ba546d8faa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/publicIPAddresses/win2016nvrt-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_win2016nvrt_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "69fbdb87-0d92-4e07-a9a6-88eff7409415",
                "ipAddress": "104.42.8.36",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/virtualNetworks/vnet-nestedvirt'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_vnet_nestedvirt_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "183ac05f-7ed0-4116-9886-4b1de63c1400",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.2.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"85dc76c9-1b6f-405f-a465-036e85ac68d0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.2.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/rg-nestedvirt/providers/Microsoft.Storage/storageAccounts/imagestoreinsightful'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_imagestoreinsightful_name')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/networkSecurityGroups/win2016nvrt-nsg/securityRules/default-allow-rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_win2016nvrt_nsg_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_win2016nvrt_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cd43a319-00a8-4bd0-83ef-1ac32197a060/resourceGroups/RG-NestedVirt/providers/Microsoft.Network/virtualNetworks/vnet-nestedvirt/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_vnet_nestedvirt_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.2.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_nestedvirt_name'))]"
            ]
        }
    ]
}
